--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "mongodb": "^5.7.0",
+    "mongoose": "^7.6.3",
     "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
