--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/router": "^16.1.0",
     "ajv": "^8.12.0",
     "bootstrap": "^5.3.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
     "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
